--- a/dummy_django_blog/blog/templates/blog/feed.html
+++ b/dummy_django_blog/blog/templates/blog/feed.html
@@ -11,7 +11,6 @@
     </div>
     <div class="d-flex flex-column justify-content-start feed-intro">
         <h3>Quel trio & leurs complices</h3>
-        <h4><a href="/">#Marlène-Laurence-Avril</a></h4>
         <p class="feed-smileys"> 👄 </p>
         <p><a href="{% url 'photos' %}">Retrouvez des photos</a></p>
         <p><a href="{% url 'posts' %}">Retrouvez des billets</a></p>
@@ -38,11 +37,12 @@
             </div>
         {% endif %}
     </div>
-</div>
-<section>
-    <div class="d-flex flex-row align-items-around">
-      <p><a href="{% url 'photos' %}">Retrouvez des photos</a></p>
-      <p><a href="{% url 'posts' %}">Retrouvez des billets</a></p>
+    <div class="feed-container-footer">
+        <div class="d-flex flex-row justify-content-around align-items-baseline">
+          <p><a href="{% url 'photos' %}">Retrouvez des photos</a></p>
+          <p><a href="{% url 'posts' %}">Retrouvez des billets</a></p>
+        </div>
     </div>
-</section>
+</div>
+
 {% endblock content %}
