--- a/dummy_django_blog/blog/templates/blog/photos_view.html
+++ b/dummy_django_blog/blog/templates/blog/photos_view.html
@@ -7,18 +7,18 @@
 {% block content %}
 <div class="container">
     <div class="w-100 d-flex flex-column align-items-center">
-      {% md_icon "details" size="1.5rem" %}
-      <h2>PHOTOS</h2>
+        {% md_icon "details" size="1.5rem" %}
+        <h2>PHOTOS</h2>
     </div>
     <div class="d-flex flex-column justify-content-around flex-wrap photos-container">
         {% if page_obj|length > 0 %}
             {% for photo in page_obj %}
-                <div class="">
+                <div class="feed-item-elements">
                   <figure>
                       <img class="photo_miniature class-img-top" src="{{ photo.image.url }}" alt="a dummy photo">
                       <figcaption><i>{{ photo.caption }}</i></figcaption>
                   </figure>
-                  <div class="card-body">
+                  <div class="feed-item-detail">
                       <p class="">{{ photo.title }}</p>
                       <p class="">Proposée par {% get_poster photo.uploader %}</p>
                       <p class="">{{ photo.created_at }}</p>
