--- a/dummy_django_blog/static/assets/css/styles.css
+++ b/dummy_django_blog/static/assets/css/styles.css
@@ -208,13 +208,27 @@ section {
   display: flex;
   flex-direction: column;
   border-radius: 3%;
-  margin: 2% 0% 5% 0%;
+  margin: 0% 0% 0% 0%;
   padding: 2% 0%;
   width: 100%;
 }
 
+.feed-container-footer {
+  width: 100%;
+  margin-bottom: 5%;
+}
+
 .feed-item {
   background-color: #00000054;
+}
+
+.feed-item-elements {
+  display: flex;
+  flex-direction: row;
+}
+
+.feed-item-detail {
+  margin-left: 5%;
 }
 
 .feed-intro {
@@ -310,6 +324,11 @@ footer {
     flex-direction: column;
     border-radius: 3%;
     margin-bottom: 10%
+  }
+
+  .feed-item-elements {
+    display: flex;
+    flex-direction: column;
   }
 
   .photos-container {
