--- a/dummy_django_blog/blog/templates/blog/feed.html
+++ b/dummy_django_blog/blog/templates/blog/feed.html
@@ -98,14 +98,13 @@
                 <a href="#navbar" class="ms-2 text-nowrap">Accueil</a>
             </div>
         </div>
-        <div class="d-flex flex-row justify-content-center"><h3>PERSONNAGES</h3></div>
         <div class="section_container">
           <article class="personnages_article">
             <div class="personnage_container">
               <div class="personnage_legende">
                 <h4>Swan Laurence</h4>
                 <figure>
-                  <img src="/media/swan_laurence.png" alt="personnage image">
+                  <img src="{{ MEDIA_URL }}swan_laurence.png" alt="personnage image">
                   <figcaption>Impitoyable commissaire</figcaption>
                 </figure>
               </div>
@@ -124,7 +123,7 @@
               <div class="personnage_legende">
                 <h4>Alice Avril</h4>
                 <figure>
-                  <img src="/media/alice_avril.jpg" alt="personnage image">
+                  <img src="{{ MEDIA_URL }}alice_avril.jpg" alt="personnage image">
                   <figcaption>L'impétueuse journaliste</figcaption>
                 </figure>
               </div>
@@ -140,7 +139,7 @@
               <div class="personnage_legende">
                 <h4>Marlène Leroy</h4>
                 <figure>
-                  <img src="/media/marlene_leroy.jpg" alt="personnage image">
+                  <img src="{{ MEDIA_URL }}marlene_leroy.jpg" alt="personnage image">
                   <figcaption>L'incroyable secrétaire</figcaption>
                 </figure>
               </div>
@@ -151,6 +150,61 @@
                   Son icône est Marilyn Monroe et elle passe souvent plus de temps à se faire les ongles qu'à répondre aux appels.
                   Elle prendra de plus en plus d'importance au fil des épisodes.
                   Marlène est secrètement amoureuse de Laurence, et en dehors des heures de travail, passe la plupart de son temps avec Alice Avril qui deviendra rapidement sa meilleure amie.
+                </p>
+              </div>
+            </div>
+            <div class="personnage_container">
+              <div class="personnage_legende">
+                <h4>Euphrasie Maillol</h4>
+                <figure>
+                  <img src="{{ MEDIA_URL }}euphrasie_maillol.jpg" alt="personnage image">
+                  <figcaption>Une renversante médecin légiste</figcaption>
+                </figure>
+              </div>
+              <div class="personnage_description">
+                <p>
+                  Euphrasie Maillol occupe le poste de médecin légiste au commissariat de Lille pendant quelques temps.
+                  Maillol est une femme de pouvoir, elle est profondément indépendante et dominante.
+                  Elle méprise les hommes, surtout ceux qui croient à une supériorité du sexe masculin sur le sexe féminin, et assume sa féminité sans se laisser enfermer par des critères misogynes.
+                  Marlène et Alice éprouvent une grande jalousie envers elle et ne lui font pas de cadeau.
+                  Marlène surtout est particulièrement mauvaise, ce qui lui vaut en retour quelques répliques cinglantes sur sa faiblesse et sa naïveté.
+                  Les deux amies du commissaire s'en donnent donc à cœur joie pour critiquer Euphrasie et se moquer des déboires amoureux de Laurence.
+                </p>
+              </div>
+            </div>
+            <div class="personnage_container">
+              <div class="personnage_legende">
+                <h4>Ernest Tricard</h4>
+                <figure>
+                  <img src="{{ MEDIA_URL }}ernest_tricard.jpg" alt="personnage image">
+                  <figcaption>Mr Le Divisionnaire</figcaption>
+                </figure>
+              </div>
+              <div class="personnage_description">
+                <p>
+                  Le commissaire divisionnaire Ernest Tricard est avant tout un homme intègre, profondément honnête.
+                  Il semble chercher à faire son travail le mieux possible.
+                  Il apporte un soutien constant au Commissaire Laurence. En effet, il reconnait ses capacités et l'efficacité de son travail.
+                  Il est lui aussi tombé sous le charme de Marlène Leroy, mais pas seulemen
+                </p>
+              </div>
+            </div>
+            <div class="personnage_container">
+              <div class="personnage_legende">
+                <h4>Tim Glissant</h4>
+                <figure>
+                  <img src="{{ MEDIA_URL }}tim_glissant.jpg" alt="personnage image">
+                  <figcaption>Un légiste au top</figcaption>
+                </figure>
+              </div>
+              <div class="personnage_description">
+                <p>
+                  Timothée « Tim » Glissant est un médecin légiste, remplaçant le Dr Maillol après son départ pour Washington.
+                  Il est diplômé de l’université d’Oxford et en est fier : il estime qu’il n’est pas un gamin à qui on peut donner des leçons.
+                  Tim travaille dans un ambiance détendue, il écoute de la musique dans son labo, mais cela ne l’empêche pas de se concentrer pour trouver tous les détails insolites qu’un cadavre peut lui donner.
+                  Il est ainsi capable de retracer la vie et la personnalité des défunts selon des éléments concrets et scientifiques.
+                  Pour ses visiteurs, il a toujours un paquet de Treets dans sa poche.
+                  Marlène semble lui avoir tapé dans l’œil, et après avoir eu l’occasion de discuter avec elle, il tente par tout les moyens d’obtenir son numéro, sans se laisser décourager par un Laurence possessif.
                 </p>
               </div>
             </div>
