--- a/dummy_django_blog/templates/base.html
+++ b/dummy_django_blog/templates/base.html
@@ -120,14 +120,14 @@
         <div class="d-flex flex-row justify-content-center">
             <p id="footer_date"></p>
         </div>
-        <div class="social-icons d-flex flex-row justify-content-center">
-            <a class="mx-2" href="#"><img src="{% static 'assets/img/icons/facebook.png' %}" alt="social media icon"></a>
-            <a class="mx-2" href="#"><img src="{% static 'assets/img/icons/github.png' %}" alt="social media icon"></a>
-            <a class="mx-2" href="#"><img src="{% static 'assets/img/icons/linkedin.png' %}" alt="social media icon"></a>
-            <a class="mx-2" href="#"><img src="{% static 'assets/img/icons/tweeter.png' %}" alt="social media icon"></a>
-        </div>
-        <div class="footer-image d-flex flex-row justify-content-center">
-            <img src="{% static 'assets/img/les_petits_meurtres_la_fin.png' %}" alt="footer image">
+        <div class="d-flex flex-row justify-content-center">
+            <a href="#navbar" alt="footer image">
+                <img class="footer-image d-flex flex-row justify-content-center" src="{% static 'assets/img/les_petits_meurtres_la_fin.png' %}" alt="footer image">
+            </a>
+            <a class="mx-2 social-icons" href="#"><img src="{% static 'assets/img/icons/facebook.png' %}" alt="social media icon"></a>
+            <a class="mx-2 social-icons" href="#"><img src="{% static 'assets/img/icons/github.png' %}" alt="social media icon"></a>
+            <a class="mx-2 social-icons" href="#"><img src="{% static 'assets/img/icons/linkedin.png' %}" alt="social media icon"></a>
+            <a class="mx-2 social-icons" href="#"><img src="{% static 'assets/img/icons/tweeter.png' %}" alt="social media icon"></a>
         </div>
     </footer>
     <script src="{% static 'assets/js/scripts.js' %}"></script>
