update init_app since Render not find media files

--- a/dummy_django_blog/blog/templates/blog/partials/post_snippet.html
+++ b/dummy_django_blog/blog/templates/blog/partials/post_snippet.html
@@ -2,7 +2,7 @@
 
 
 <div class="d-flex flex-column vignette" id="{{ post.id }}">
-    <a href=""{% url 'posts_detail' post.id %}">
+    <a href="{% url 'posts_detail' post.id %}">
         <div class="feed-item-elements">
             <figure>
                 <a class="m-1" href="{% url 'posts_detail' post.id %}">
