--- a/dummy_django_blog/templates/base.html
+++ b/dummy_django_blog/templates/base.html
@@ -92,9 +92,11 @@
                           <div class="nav-link dropdown custom-dropdown user-dropdown">
                               {% if user.is_authenticated %}
                                   <a class="nav-item dropdown-toggle mt-3" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-
-                                      <img class="image_profile" src="{{ user.image_profile.url }}" alt="{{ user.image_profile }}">
-
+                                      {% if user.image_profile.name == "default_profile.png" %}
+                                          <img class="image_profile rounded-pill" src="{% static 'vendors/img/default_profile.png' %}" alt="photo de profil">
+                                      {% else %}
+                                          <img class="image_profile" src="{{ user.image_profile.url }}" alt="{{ user.image_profile }}">
+                                      {% endif %}
                                       {{ user.username }}
                                   </a>
                                   <ul class="dropdown-menu">
